--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "url": "https://github.com/"
   },
   "devDependencies": {
-    "@types/node": "16.7.10",
-    "@types/react": "17.0.19",
+    "@types/node": "20.6.0",
+    "@types/react": "18.2.21",
     "@types/react-dom": "17.0.9",
     "@types/react-select": "4.0.17",
     "@types/redux-persist": "^4.3.1",
@@ -64,6 +64,6 @@
     "prettier": "2.3.2",
     "pretty-quick": "3.1.1",
     "react-live": "2.3.0",
-    "typescript": "^5.2.2"
+    "typescript": "5.2.2"
   }
 }
