--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 # #development
-# NEXT_PUBLIC_APP_API_ADMIN=http://localhost:3001/api/v1
-NEXT_PUBLIC_APP_API_ADMIN=https://838f-36-78-10-73.ngrok-free.app 
+NEXT_PUBLIC_APP_API_ADMIN=http://localhost:3001/api/v1
+# NEXT_PUBLIC_APP_API_ADMIN=https://838f-36-78-10-73.ngrok-free.app 
 
 
 
